deployment/k8s/pod-example/backend-user-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend-usrpod
  labels:
    purpose: Debug-backend-user-image
spec:
# restartPolicy: OnFailure    
  containers:
    - image: gmpatil/udgm-api-user
      name: backend-user
      imagePullPolicy: Always
#      command: ["find"]
#      args: ["."]      
#      command: ["/bin/echo"]
#      args: ["$(MESSAGE)"]
#      command: ["bash"]
#      args: ["HOSTNAME", "KUBERNETES_PORT"]
      resources:
        requests:
            memory: 512Mi
            cpu: 250m
        limits:
            memory: 1024Mi
            cpu: 500m
      ports:
        - containerPort: 8080
