deployment/k8s/pod-example/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-example
spec:
  containers:
  - image: gmpatil/udgm-reverseproxy
    name: reverseproxy
    imagePullPolicy: Always          
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "1024Mi"
        cpu: "500m"       
    ports:
    - containerPort: 8080
  restartPolicy: Always
