deployment/k8s/pod-example/ingress_tst.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
name: path-ingress
annotations:
  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
rules:
- http:
	paths:
	- path: /api/v0/feed
	  backend:
		serviceName: backend-feed
		servicePort: 8080
	- path: backend-feed
	  backend: /api/v0/users
		serviceName: backend-feed
		servicePort: 8080
